2022-07-14  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha03: Moon Sun Run';git push
	git tag -a 5.1.1-alpha03 -m '';git push --tags

	* Call nc_inq_filter_avail() only if it exists and might be successful, quiet messages

2022-07-13  Charlie Zender  <zender@uci.edu>

	* Retrofit nco_fl_blocksize() and nco_fl_mv() to handle NCZarr file:// schema storage

	* NCO 5.1.1-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha02: Webb';git push
	git tag -a 5.1.1-alpha02 -m 'ncks: read/hyperslab/print NCZarr files';git push --tags

	* Add external data type NC_FORMATX_NCZARR

	* Remove "-D_BSD_SOURCE -D_POSIX_SOURCE" from gnu and icc in configure.ac

	* Treat NCZarr files with file:// scheme like DAP files so printing works

2022-07-12  Charlie Zender  <zender@uci.edu>

	* Call nco_cdc_lst_bld() only if an invoked filter was not found

	* Add stubs to let NCO examine files with NCZarr file:// schema

	* NCO 5.1.1-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha01: Bali';git push
	git tag -a 5.1.1-alpha01 -m 'Functionally identical to 5.1.0';git push --tags

	* Increase NCO_MIN_CNK_BLOSC from 1U to 4096U to prevent some Blosc errors

	* NCO 5.1.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.0: Rattlesnake';git push
	git tag -a 5.1.0 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags

	* Change E3SMU_ROOT from 1.6.0 to 1.7.0 in ncremap

	* Warn about Blosc codec in docs

2022-07-11  Charlie Zender  <zender@uci.edu>

	* Tidy nco_fl_mk_lcl() in preparation for Zarr-access work

	* Flesh-out HINT for missing codec WARNING

	* Prevent carrying rcd from cdc_lst_bld into filter loop

2022-07-09  Charlie Zender  <zender@uci.edu>

	* Rewrite nc_inq_var_filter_info() stub for old (pre-4.7.4) netCDF libraries

	* Rewrite nc_inq_var_filter_ids() stub for old (pre-4.7.4) netCDF libraries
